[core][fix] Plantuml settings (#2063)
