# fixcore/fixcore/static/api-doc.yaml
@@ -42,154 +42,6 @@ tags:
 paths:
 
   # region model
-  /model:
-    get:
-      summary: "[Deprecated] Get the currently defined model."
-      description: "Use /graph/{graph_id}/model instead."
-      deprecated: true
-      tags:
-        - model
-      parameters:
-        - name: flat
-          description: "If true, the hierarchy of complex kinds is flattened, holding all properties and all merged metadata."
-          in: query
-          schema:
-            type: boolean
-            default: false
-      responses:
-        "200":
-          description: "The list of all kinds."
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Kind"
-    patch:
-      summary: "[Deprecated] Add or update the current defined model."
-      description: "Use /graph/{graph_id}/model instead."
-      deprecated: true
-      tags:
-        - model
-      requestBody:
-        description: "Complete model or part of the model."
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Kind"
-      responses:
-        "200":
-          description: "OK if the model is updated successfully"
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Kind"
-        "400":
-          description: "Message that explains the error"
-          content:
-            text/plain:
-              schema:
-                type: string
-  /model/uml:
-    get:
-      summary: "[Deprecated] Get the currently defined model as svg uml image."
-      description: "Use /graph/{graph_id}/model/uml instead."
-      deprecated: true
-      tags:
-        - model
-      parameters:
-        - name: output
-          description: The output format.
-          in: query
-          schema:
-            type: string
-            enum:
-              - svg
-              - png
-            default: svg
-          required: false
-        - name: show
-          description: comma separated list of resources to show. Entries can be regexps.
-          in: query
-          schema:
-            type: string
-          required: false
-          explode: false
-          example: aws_ec2_instance,gcp.*
-        - name: hide
-          description: |
-            comma separated list of resources to hide. Entries can be regexps.
-            hide takes precedence over show.
-          in: query
-          schema:
-            type: string
-          required: false
-          explode: false
-          example: aws_ec2_instance,gcp.*
-        - name: with_inheritance
-          description: Include inheritance relations in the model.
-          in: query
-          schema:
-            type: boolean
-            default: true
-        - name: with_base_classes
-          description: Include all base classes of visible entries
-          in: query
-          schema:
-            type: boolean
-            default: true
-        - name: with_subclasses
-          description: Include all descendant classes of visible entries
-          in: query
-          schema:
-            type: boolean
-            default: false
-        - name: dependency
-          description: |
-            comma separated list of dependency relationships.
-          in: query
-          schema:
-            type: string
-          required: false
-          explode: false
-          example: default
-        - name: with_predecessors
-          description: Include all predecessors of selected entries
-          in: query
-          schema:
-            type: boolean
-            default: false
-        - name: with_successors
-          description: Include all successors of selected entries
-          in: query
-          schema:
-            type: boolean
-            default: false
-        - name: with_properties
-          description: Show properties of selected entries
-          in: query
-          schema:
-            type: boolean
-            default: true
-        - name: link_classes
-          description: Add anchor links to classes.
-          in: query
-          schema:
-            type: boolean
-            default: false
-        - name: aggregate_roots
-          description: Show aggregate roots.
-          in: query
-          schema:
-            type: boolean
-            default: true
-        - name: sort_props
-          description: Sort properties by name.
-          in: query
-          schema:
-            type: boolean
-            default: true
-      responses:
-        "200":
-          description: "Returns the model as uml diagram in svg format"
   /graph/{graph_id}/model:
     get:
       summary: "Get the currently defined model."
@@ -287,6 +139,7 @@ paths:
             enum:
               - svg
               - png
+              - puml
             default: svg
           required: false
         - name: show
@@ -350,7 +203,9 @@ paths:
           description: Show properties of selected entries
           in: query
           schema:
-            type: boolean
+            oneOf:
+              - type: boolean
+              - type: string
             default: true
         - name: link_classes
           description: Add anchor links to classes.
